# ocaml-docs

./: README.md  currying.md  dune  fun_app.md  mkdocs.yml
.github/workflows/: deploy-docs-md.yml
docs/: index.md  monad.md
site/: 404.html  index.html
site/currying/: index.html
site/fun_app/: index.html
site/monad/: index.html
site/search/: search_index.json
