(documentation
 (package ocaml-demos))

;;;;;; just using makefile so we don't need to list them manually
; (rule
;  (targets fun_app.md currying.md monad.md)
;  (deps
;   (glob_files ../lib/*.ml)
;   %{project_root}/scripts/ml_to_md.py)
;  (action
;   (run
;    python3
;    %{project_root}/scripts/ml_to_md.py
;    -o
;    %{project_root}/doc
;    ../lib/fun_app.ml
;    ../lib/currying.ml
;    ../lib/monad.ml))
;  (mode
;   (promote (until-clean))))
